--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
@@ -23,17 +23,33 @@
             </div>
         </div>
     </nav>
-
     <section id="about" class="py-5 bg-light text-center mb-5">
         <div class="container">
             <h1>À propos de moi</h1>
-            <p>Voici une brève présentation de moi-même.</p>
-            <p>Passionné par <span class="fw-bold">l’analyse de données</span>, le <span class="fw-bold">développement web</span> et <span class="fw-bold">l’enseignement</span>, je suis un <span class="fw-bold">Data Analyst</span> avec une solide formation en <span class="fw-bold">mathématiques pures</span>, <span class="fw-bold">statistiques</span> et <span class="fw-bold">informatique</span>. Mon parcours académique et professionnel m’a permis d’acquérir une expertise en <span class="fw-bold">Python</span>, <span class="fw-bold">SQL</span>, <span class="fw-bold">Power BI</span> et <span class="fw-bold">Excel</span>, que j’utilise pour analyser les données et aider à la prise de décision.</p>
-            <p>En parallèle, je mets mes compétences en mathématiques au service des étudiants en donnant des <span class="fw-bold">cours de maths</span> pour tous les niveaux jusqu’à la terminale. Mon objectif est de rendre les concepts mathématiques accessibles et concrets, en les reliant à des applications réelles, notamment en science des données.</p>
-            <p>Je maîtrise également les technologies web comme <span class="fw-bold">HTML</span>, <span class="fw-bold">CSS</span>, <span class="fw-bold">Bootstrap</span> et travaille actuellement sur le <span class="fw-bold">développement d’applications mobiles</span>. Toujours en quête d’amélioration, je continue de me former en <span class="fw-bold">Deep Learning</span> avec <span class="fw-bold">TensorFlow</span>.</p>
+                <p>Voici une brève présentation de moi-même.</p>
+                Passionné par <span class="fw-bold">l’analyse de données</span>, le <span class="fw-bold">développement web</span> et <span class="fw-bold">l’enseignement</span>, je suis un <span class="fw-bold">Data Analyst</span> avec une solide formation en <span class="fw-bold">mathématiques pures</span>, <span class="fw-bold">statistiques</span> et <span class="fw-bold">informatique</span>. Mon parcours académique et professionnel m’a permis d’acquérir une expertise en <span class="fw-bold">Python</span>, <span class="fw-bold">SQL</span>, <span class="fw-bold">Power BI</span> et <span class="fw-bold">Excel</span>, que j’utilise pour analyser les données et aider à la prise de décision.               
+                En parallèle, je mets mes compétences en mathématiques au service des étudiants en donnant des <span class="fw-bold">cours de maths</span> pour tous les niveaux jusqu’à la terminale. Mon objectif est de rendre les concepts mathématiques accessibles et concrets, en les reliant à des applications réelles, notamment en science des données.
+                Je maîtrise également les technologies web comme <span class="fw-bold">HTML</span>, <span class="fw-bold">CSS</span>, <span class="fw-bold">Bootstrap</span> et travaille actuellement sur le <span class="fw-bold">développement d’applications mobiles</span>. Toujours en quête d’amélioration, je continue de me former en <span class="fw-bold">Deep Learning</span> avec <span class="fw-bold">TensorFlow</span>.
         </div>
     </section>
-
+    <section id="about" class="bg-light text-center">
+        <section id="about" class="container col-md-12 bg-light text-center">
+            <div class="row align-items-center px-5">
+                <div class="container col-md-6 w-50 mx-auto text-start">
+                  <h2>📍 Domaines d’expertise :</h2>
+                       <p>✔ Analyse et visualisation de données</p>
+                       <p>✔ Automatisation avec Python et Excel</p>
+                       <p>✔ Création de tableaux de bord interactifs</p>
+                       <p>✔ Développement de sites web</p>
+                       <p>✔ Enseignement des mathématiques jusqu’à la terminale</p>
+                </div>
+                <div class="container col-md-6">
+                    <img src="Images/IMG-20250110-WA0036.jpg" class="img-fluid rounded-circle" width="200px" height="auto" object-fit="cover" alt="Photo de profile">
+                </div> 
+             </div>        
+        </section>
+     <p>Que ce soit pour exploiter vos données, développer un projet digital ou progresser en mathématiques, n’hésitez pas à me contacter !</p>
+    </section>
     <section id="portfolio" class="py-5 text-center">
         <div class="container">
             <h1>Mes Projets</h1>
@@ -43,23 +59,23 @@
                         <div class="card-body">
                             <h5 class="card-title">Projet 1</h5>
                             <span class="fw-bold">Optimisation des Tarifs de Stationnement par Analyse et Graphes</span>
-                            <p>Ce projet vise à optimiser les tarifs de stationnement en analysant les données et en utilisant la théorie des graphes. L’objectif est d’ajuster dynamiquement les prix pour mieux répartir les véhicules, réduire la saturation et maximiser les revenus.</p>
-                            <p>📌 <span class="fw-bold">Méthodologie</span></p>
-                            <p><span class="fw-bold">Analyse des données :</span> Étude des historiques de stationnement et des flux de véhicules.</p>
-                            <p><span class="fw-bold">Modélisation par graphes :</span> Identification des zones clés et de la connectivité du réseau de stationnement.</p>
-                            <p><span class="fw-bold">Optimisation des tarifs :</span> Ajustement dynamique des prix en fonction de la demande.</p>
-                            <p><span class="fw-bold">Visualisation :</span> Création de tableaux de bord interactifs avec Power BI et Python.</p>
-                            <p><span class="fw-bold">🛠 Technologies utilisées</span></p>
-                            <p><span class="fw-bold">Python (Pandas, NetworkX, SciPy)</span></p>
-                            <p><span class="fw-bold">SQL pour la gestion des données</span></p>
-                            <p><span class="fw-bold">Power BI pour la visualisation</span></p>
-                            <p><span class="fw-bold">HTML/CSS & Bootstrap pour la présentation</span></p>
-                            <p><span class="fw-bold">✅ Résultat :</span> Une tarification intelligente permettant une meilleure régulation du stationnement et une optimisation des revenus.</p>
+                                <p>Ce projet vise à optimiser les tarifs de stationnement en analysant les données et en utilisant la théorie des graphes.L’objectif est d’ajuster dynamiquement les prix pour mieux répartir les véhicules, réduire la saturation et maximiser les revenus.</p>
+                                <p>📌 <span class="fw-bold">Méthodologie</span></p>
+                                <p><span class="fw-bold">Analyse des données :</span> Étude des historiques de stationnement et des flux de véhicules.</p>
+                                <p><span class="fw-bold">Modélisation par graphes :</span> Identification des zones clés et de la connectivité du réseau de stationnement.</p>
+                                <p><span class="fw-bold">Optimisation des tarifs :</span> Ajustement dynamique des prix en fonction de la demande.</p>
+                                <p> <span class="fw-bold">Visualisation :</span> Création de tableaux de bord interactifs avec Power BI et Python.</p>
+                                <p><span class="fw-bold">🛠 Technologies utilisées</span></p>
+                                <p><span class="fw-bold">Python (Pandas, NetworkX, SciPy)</span></p>
+                                <p><span class="fw-bold">SQL pour la gestion des données</span></p>
+                                <p><span class="fw-bold"> Power BI pour la visualisation</span></p>
+                                <p><span class="fw-bold">HTML/CSS & Bootstrap pour la présentation</span></p>
+                                <p><span class="fw-bold"></span>✅ Résultat :</span> Une tarification intelligente permettant une meilleure régulation du stationnement et une optimisation des revenus.</p>
                         </div>
                         <div>
                             <img src="Fichier/Screenshot_20250304-125939_Office Docs.jpg" class="card-img-top" alt="Projet 1">
                         </div>
-                        <a href="Images/projet_1.pdf" download="projet_1.pdf" target="_blank">Télécharger le projet</a>
+                        <a href="Images/projet_1.pdf" download="projet_1.pdf" target="_blank">Telecharger le projet</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -83,10 +99,10 @@
                         <div>
                             <img src="Images/" class="card-img-top" alt="Projet 3">
                         </div>
-                        <a href="Images/projet_1.pdf" download="projet_3.pdf" target="_blank">Telecharger le projet</a>
+                        <a href="Images/projet_3.pdf" download="projet_3.pdf" target="_blank">Telecharger le projet</a>
                     </div>
                 </div>
-                <!-- Ajoute d'autres projets ici -->
+                <!-- Ajoute plus de projets ici -->
             </div>
         </div>
     </section>
@@ -112,7 +128,7 @@
         </div>
     </section>
 
-    <script src="animations.js"></script>
+    <script src="{{ url_for('static', filename='animations.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
