--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div>
                             <img src="Fichier/Screenshot_20250304-125939_Office Docs.jpg" class="card-img-top" alt="Projet 1">
                         </div>
-                        <a href="Images/projet_1.pdf" download="projet_1.pdf" target="_blank">Telecharger le projet</a>
+                        <a href="Fichier/" download="projet_1.pdf" target="_blank">Telecharger le projet</a>
                     </div>
                 </div>
                 <div class="col-md-4">
