--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body style="color: blue;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="#">Mon Portfolio</a>
@@ -48,7 +48,7 @@
                 </div> 
              </div>        
         </section>
-     <p>Que ce soit pour exploiter vos données, développer un projet digital ou progresser en mathématiques, n’hésitez pas à me contacter !</p>
+     <p style="color: aqua;">Que ce soit pour exploiter vos données, développer un projet digital ou progresser en mathématiques, n’hésitez pas à me contacter !</p>
     </section>
     <section id="portfolio" class="py-5 text-center">
         <div class="container">
