--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div> 
              </div>        
         </section>
-     <p style="color: aqua;">Que ce soit pour exploiter vos données, développer un projet digital ou progresser en mathématiques, n’hésitez pas à me contacter !</p>
+     <p class="fw-bold" style="color: #006400;">Que ce soit pour exploiter vos données, développer un projet digital ou progresser en mathématiques, n’hésitez pas à me contacter !</p>
     </section>
     <section id="portfolio" class="py-5 text-center">
         <div class="container">
