--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="about" class="bg-light text-center">
         <section id="about" class="container col-md-12 bg-light text-center">
             <div class="row align-items-center px-5">
-                <div class="container col-md-6 w-50 mx-auto text-start">
+                <div class="container col-md-6 col-sm-6 w-50 mx-auto text-start">
                   <h2>📍 Domaines d’expertise :</h2>
                        <p>✔ Analyse et visualisation de données</p>
                        <p>✔ Automatisation avec Python et Excel</p>
@@ -43,7 +43,7 @@
                        <p>✔ Développement de sites web</p>
                        <p>✔ Enseignement des mathématiques jusqu’à la terminale</p>
                 </div>
-                <div class="container col-md-6">
+                <div class="container col-md-6 col-sm-6">
                     <img src="Fichier/IMG-20250110-WA0036.jpg" class="img-fluid rounded-circle" width="200px" height="auto" object-fit="cover" alt="Photo de profile">
                 </div> 
              </div>        
