--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="about" class="bg-light text-center">
         <section id="about" class="container col-md-12 bg-light text-center">
             <div class="row align-items-center px-5">
-                <div class="container col-md-6 w-50 mx-auto text-start">
+                <div id="domaine" class="container col-md-6 w-50 mx-auto text-start d-none d-md-block">
                   <h2>📍 Domaines d’expertise :</h2>
                        <p>✔ Analyse et visualisation de données</p>
                        <p>✔ Automatisation avec Python et Excel</p>
