--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <body style="color: blue;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="#">Mon Portfolio</a>
+            <a class="navbar-brand" href="https://golden20boy.github.io/MonPortfolio/">Mon Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#about">À propos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://golden20boy.github.io/MonPortfolio/">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Fichier/Mon cv.pdf">Mon cv</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -31,11 +32,12 @@
                 En parallèle, je mets mes compétences en mathématiques au service des étudiants en donnant des <span class="fw-bold">cours de maths</span> pour tous les niveaux jusqu’à la terminale. Mon objectif est de rendre les concepts mathématiques accessibles et concrets, en les reliant à des applications réelles, notamment en science des données.
                 Je maîtrise également les technologies web comme <span class="fw-bold">HTML</span>, <span class="fw-bold">CSS</span>, <span class="fw-bold">Bootstrap</span> et travaille actuellement sur le <span class="fw-bold">développement d’applications mobiles</span>. Toujours en quête d’amélioration, je continue de me former en <span class="fw-bold">Deep Learning</span> avec <span class="fw-bold">TensorFlow</span>.
         </div>
+        <a href="Fichier/Mon cv.pdf" download="Mon cv.pdf" target="_blank">Telecharger Mon cv</a>
     </section>
     <section id="about" class="bg-light text-center">
         <section id="about" class="container col-md-12 bg-light text-center">
             <div class="row align-items-center px-5">
-                <div id="domaine" class="container col-md-6 w-50 mx-auto text-start d-none d-md-block">
+                <div id="domaine" class="container col-md-6 w-50 mx-auto text-start d-none">
                   <h2>📍 Domaines d’expertise :</h2>
                        <p>✔ Analyse et visualisation de données</p>
                        <p>✔ Automatisation avec Python et Excel</p>
