--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 En parallèle, je mets mes compétences en mathématiques au service des étudiants en donnant des <span class="fw-bold">cours de maths</span> pour tous les niveaux jusqu’à la terminale. Mon objectif est de rendre les concepts mathématiques accessibles et concrets, en les reliant à des applications réelles, notamment en science des données.
                 Je maîtrise également les technologies web comme <span class="fw-bold">HTML</span>, <span class="fw-bold">CSS</span>, <span class="fw-bold">Bootstrap</span> et travaille actuellement sur le <span class="fw-bold">développement d’applications mobiles</span>. Toujours en quête d’amélioration, je continue de me former en <span class="fw-bold">Deep Learning</span> avec <span class="fw-bold">TensorFlow</span>.
         </div>
-        <a href="Fichier/Mon cv.pdf" download="Mon cv.pdf" target="_blank">Telecharger Mon cv</a>
+        <a href="Fichier/Mon cv.pdf" download="Mon cv.pdf" target="_blank" style="color: red;">Telecharger Mon cv</a>
     </section>
     <section id="about" class="bg-light text-center">
         <section id="about" class="container col-md-12 bg-light text-center">
@@ -112,7 +112,7 @@
     <section id="contact" class="py-5 bg-light text-center">
         <div class="container">
             <h1>Contact</h1>
-            <form class="text-start mx-auto" style="max-width: 500px;">
+            <form class="text-start mx-auto" style="max-width: 500px;" action="goradiongue97@gmail.com" methode="post" enctype="text/plain">
                 <div class="mb-3">
                     <label for="name" class="form-label">Nom</label>
                     <input type="text" class="form-control" id="name" placeholder="Votre nom">
