--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
             <form class="text-start mx-auto" style="max-width: 500px;" action="goradiongue97@gmail.com" methode="post" enctype="text/plain">
                 <div class="mb-3">
                     <label for="name" class="form-label">Nom</label>
-                    <input type="text" class="form-control" id="name" placeholder="Votre nom">
+                    <input type="text" class="form-control" id="name" placeholder="Votre nom" required>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Votre email">
+                    <input type="email" class="form-control" id="email" placeholder="Votre email" required>
                 </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="3" placeholder="Votre message"></textarea>
+                    <textarea class="form-control" id="message" rows="3" placeholder="Votre message" required></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Envoyer</button>
             </form>
