--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body style="color: blue;">
+<body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="https://golden20boy.github.io/MonPortfolio/">Mon Portfolio</a>
@@ -37,7 +37,7 @@
     <section id="about" class="bg-light text-center">
         <section id="about" class="container col-md-12 bg-light text-center">
             <div class="row align-items-center px-5">
-                <div id="domaine" class="container col-md-6 w-50 mx-auto text-start d-none">
+                <div id="domaine" class="container col-md-6 w-50 mx-auto text-start">
                   <h2>📍 Domaines d’expertise :</h2>
                        <p>✔ Analyse et visualisation de données</p>
                        <p>✔ Automatisation avec Python et Excel</p>
